--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,40 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>grupohabilitacionlllm.proyecto.vial.gchu.srl.ProyectoVialGchuSRL</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.5.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.12.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version> <!-- Revisar-->
+                <configuration>
+                    <!-- or whatever version you use -->
+                    <source>1.8</source>  <!-- Revisar Version -->
+                    <target>1.8</target>  <!-- Revisar Version -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
